--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="col-12 col-lg-10 px-0 px-md-3">
               <div class="text-content text-center p-3 p-lg-4 mx-0 mx-md-3" 
                    style="background-color: rgba(255,255,255,0.9); border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-                   <h2 class="mb-3 mb-lg-4 px-2 fs-3 fs-lg-2" style="color: #ab2c48;">
+                   <h2 class="mb-3 mb-lg-4 fs-3 fs-lg-2 lh-sm lh-lg-base" style="color: #ab2c48;">
                     When a man's stomach is full it makes no difference whether he's rich or poor
                   </h2>               
                 <ul class="list-unstyled text-start mb-3 mb-lg-4 ps-4 ps-lg-5 mx-auto" style="max-width: 600px;">
@@ -179,7 +179,6 @@
         </div>
       </div>
     </section>
-    
     <!--Section 4 explore food-->
     <section id="explore">
       <div class="explore-food wrapper">
