--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
         <div class="container px-0 px-md-3">
           <div class="row justify-content-center mx-0">
             <div class="col-12 col-lg-10 px-0 px-md-3">
-              <div class="text-content text-center p-3 p-lg-4 mx-0 mx-md-3" 
-                   style="background-color: rgba(255,255,255,0.9); border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+              <div class="text-content text-center p-3 p-lg-4 mx-0 mx-md-3 "
+                   style="background-color: rgba(255,255,255,0.9); border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); margin-bottom: 15px;">
                    <h2 class="mb-3 mb-lg-4 fs-3 fs-lg-2 lh-sm lh-lg-base" style="color: #ab2c48;">
                     When a man's stomach is full it makes no difference whether he's rich or poor
                   </h2>               
